fix: improve dynamic properties execution
   - rework execution chain by simplifying cron
   - rework rx chain to properly setup scheduler and avoid thread blocked exception

(cherry picked from commit ca251eafd52dcdd60fdb66f7e0aa5aa638b9ac55)